# print_dispatch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
old_script/: fetch_emails.py
spec/: dispatch_v1.md  logging_v1.md  manifest_schema_f1.md  ui_contract_v1.md  validation_v1.md
src/print_dispatch/: __init__.py  config.py  logging_setup.py  manifest.py  manifest_io.py
src/print_dispatch/dispatch/: __init__.py  build_groups.py  plan_297.py  queue_depth.py
src/print_dispatch/domain/: __init__.py  models.py
src/print_dispatch/execute/: __init__.py  dry_run.py  executor.py  real_submitter.py
src/print_dispatch/ingest/: __init__.py  outlook_ingest.py
src/print_dispatch/prepare/: __init__.py  materialize_order.py  pdf_analyze.py  split_to_single_pages.py
src/print_dispatch/ui/: app_streamlit.py
tests/: test_build_groups.py  test_config.py  test_executor.py  test_logging_setup.py  test_manifest_models.py  test_materialize_order.py  test_outlook_ingest.py  test_pdf_analyze.py  test_plan_297.py  test_real_submitter.py  test_split_to_single_pages.py
